# hackathon-2022-winter

./: .gitignore  .gitmodules  README.md
docs/: categories.md
src/ui/: .gitignore
src/utils/: file.js
teams/: Readme.md
teams/00-team-template/: README.md
teams/01-RedStone_Network/: README.md
teams/01-RedStone_Network/src/cess-api/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go
teams/01-RedStone_Network/src/pmail-frontend/: .env.development  .env.production  .env.test  .eslintrc-auto-import.json  .prettierrc  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
teams/01-RedStone_Network/src/pmail-go-api/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go
teams/01-RedStone_Network/src/pmail-node/: Cargo.toml
teams/01-RedStone_Network/src/pmail-node/bench/: Cargo.toml
teams/01-RedStone_Network/src/pmail-node/cli/: Cargo.toml
teams/01-RedStone_Network/src/pmail-node/cli/src/: chain_spec.rs
teams/01-RedStone_Network/src/pmail-node/executor/: Cargo.toml
teams/01-RedStone_Network/src/pmail-node/pallets/mail/: Cargo.toml  README.md
teams/01-RedStone_Network/src/pmail-node/pallets/mail/src/: lib.rs  mock.rs  tests.rs
teams/01-RedStone_Network/src/pmail-node/rpc/: Cargo.toml
teams/01-RedStone_Network/src/pmail-node/testing/: Cargo.toml
teams/01-RedStone_Network/src/pmail-node/testing/src/: keyring.rs
teams/01-team-cicada/meetings/: cicada 开发设计分解.md  cicada-kickoff.md
teams/01-team-cicada/src/backend/: README.md
teams/02-decode-labs/: README.md
teams/02-decode-labs/docs/: project.md
teams/03-ALine/: README-ch.md  README.md
teams/03-team-ALine/: README.md
teams/04-cambio-network/: README.md
teams/05-Funplay/: README.md  readme.docx
teams/06-Aura Wallet/: README-CN.md  README.md
teams/07-lightm/: .gitignore  README.md
teams/07-lightm/docs/: UNABLE_TO_OPEN_PPT.md
teams/08-We3social/: README.md  README_zh.md
teams/09-Coincidence-Labs/: README.md
teams/10-Tenet/: README-ZH.md  README.md
teams/10-Tenet/docs/: videown_operation_tutorial.md  videown_technology_artchitect.md  videown技术架构.md  videown操作教程.md
teams/101-O20k/: README.md
teams/101-O20k/docs/: Principle of Omniverse AMM.md
teams/101-O9P/: .gitignore  README.md
teams/101-O9P/docs/: Principle of Omniverse AMM.md
teams/11-NonceGeek@Moereum/: README.md
teams/11-NonceGeek@Moereum/src/substrate/Moereum/constants/: Cargo.toml
teams/11-NonceGeek@Moereum/src/substrate/Moereum/constants/src/: currency.rs  lib.rs
teams/11-NonceGeek@Moereum/src/substrate/Moereum/pallets/ethereum-chain-id/: Cargo.toml
teams/11-NonceGeek@Moereum/src/substrate/Moereum/pallets/ethereum-chain-id/src/: lib.rs
teams/11-NonceGeek@Moereum/src/substrate/Moereum/primitives/: Cargo.toml
teams/11-NonceGeek@Moereum/src/substrate/Moereum/primitives/src/: currency.rs  lib.rs
teams/11-NonceGeek@Moereum/src/substrate/Moereum/utils/stdlib-fetch/: Cargo.toml
teams/12-LP/: README.md
teams/13-SalvadoFinance/: README.md  README_zh.md
teams/14-MetaCity/: README.md
teams/14-MetaCity/src/: Cargo.toml  lib.rs
teams/15-team-cicada/: README.md
teams/15-team-cicada/docs/: Cicada Pitch Deck.pptx  ProjectInfo-EN.md
teams/15-team-cicada/meetings/: Cicada-weekly-meeting 12.1.md  Cicada-weekly-meeting 12.15.md  cicada-kickoff.md  weekly-meeting-11.24.md
teams/15-team-cicada/src/chain/pallets/cicada/: Cargo.toml
teams/15-team-cicada/src/chain/pallets/cicada/src/: lib.rs  mock.rs  tests.rs
teams/16-Amphi/: README.md
teams/17-team-AdMeta/: README.md
teams/18-Web3box/: .gitignore  README.md  main.js  package-lock.json  package.json
teams/18-Web3box/config/: paths.js  webpack.config.js
teams/18-Web3box/docs/: API_Doc.md  Twitter_download Readme.md
teams/18-Web3box/public/: index.html
teams/18-Web3box/risk/: Tweets_download&sentimentV2.ipynb
teams/18-Web3box/src/: setupProxy.js
teams/20-Threechain/: README
teams/21-Cumulon Protocol/: README.md
teams/22-YGY/: README.md
teams/24-Avault/: README.md
teams/25-Auto3/: README.md
teams/26.MVP/: 项目介绍.md
teams/27-Block Taker/: README.md
teams/27-BlockTaker/: README.md
teams/27-BlockTaker/docs/: Polkadot hackathon.md
teams/28-SubAd/: README.md
teams/29-CTW/: README
teams/30-MetaverseBountyHacker/: README
teams/31-CCLAMM/: README.md
teams/32-zkNFT/: README.md
teams/33-Teamer/: README.md
teams/34-Metopia/: README.md
teams/35-QV.OD/: README.md
teams/35-QV.OD/docs/: architecture.md  build.md
teams/35-QV.OD/src/: README.md  localnode.md
teams/36-Designer/: README.md
teams/36-Designer/docs/: build.md  howto.md
teams/36-Designer/src/: README.md
teams/36-Designer/src/contracts/: .binpath  Cargo.toml  Makefile  README.md
teams/36-Designer/src/contracts/release/: de_signer.meta.wasm  de_signer.opt.wasm  de_signer.wasm
teams/36-Designer/src/contracts/src/: designer.rs  io.rs  lib.rs  page.rs  state.rs
teams/36-Designer/src/contracts/tests/: contract_tests.rs  owner_tests.rs  query_contract_tests.rs
teams/37-Gitverse/: README.md  abi.json  package.json  pnpm-lock.yaml
teams/37-Gitverse/contract/: factory.sol  ownable.sol  project.sol
teams/38-O20k/: README.md
teams/38-O20k/docs/: DemoVideoExplanation.md  Principle of Omniverse AMM.md  README.md
teams/38-O20k/src/omniverse-swap/pallets/assets/: Cargo.toml
teams/38-O20k/src/omniverse-swap/pallets/assets/src/: functions.rs  lib.rs  mock.rs  tests.rs  traits.rs  types.rs
teams/38-O20k/src/pallets/omni-factory/traits/: Cargo.toml
teams/38-O20k/src/pallets/omni-factory/traits/src/: lib.rs
teams/38-O20k/src/pallets/omni-swap/: Cargo.toml
teams/38-O20k/src/pallets/omni-swap/src/: lib.rs  mock.rs  tests.rs
teams/39-PrivaDEX/: README.md
teams/40-Tokhub/: README.md
teams/41-ShadowX/: README.md
teams/41-ShadowX/docs/: READM.md
teams/41-ShadowX/src/: code.md
teams/Gitverse-37/: .env.example  README.md  gitScript.js  gitverse.js  package-lock.json  package.json  tsconfig.json
teams/zkNFT/: README.md
(+1954 files in other folders)
