[package]
name = "de-signer"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["de-signer"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
primitive-types = { version = "0.12.1", default-features = false, features = ["scale-info"] }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
