[package]
authors = ['Moereum Network']
edition = '2021'
homepage = 'https://moereum.network'
license = 'Unlicense'
name = 'primitives'
repository = 'https://github.com/NonceGeek/Moereum/'
version = '3.0.0'

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["max-encoded-len"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.18' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.18' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.18' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.18' }

[features]
default = ["std"]
pont = []
std = [
    "serde",
	"codec/std",
    "scale-info/std",
    "sp-core/std",
    "frame-support/std",
    "sp-std/std",
]
