[package]
name = 'pallet-cicada'
version = '4.0.0-dev'
description = 'FRAME pallet cicada.'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://substrate.io/'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[dependencies]
serde = { version = '1.0.130', default-features = false, features = ['derive'] }
serde_json = { version = '1.0.67', default-features = false, features = ['alloc'] }
sp-std = { git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-11-1', version = '4.0.0-dev', default-features = false }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
tag = 'monthly-2021-11-1'
version = '4.0.0-dev'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11-1'
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11-1'
version = '4.0.0-dev'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11-1'
version = '4.0.0-dev'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11-1'
version = '4.0.0-dev'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11-1'
version = '4.0.0-dev'

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
	'sp-std/std',
]
try-runtime = ['frame-support/try-runtime']
