[package]
name = "omniverse-token-traits"
version = "4.0.0-dev"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-std = { version = "4.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31" }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31" }
omniverse-protocol-traits = { version = "4.0.0-dev", default-features = false, path = "../../omni-protocol/traits" }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = [
]