[package]
authors = ['NonceGeek Developer']
edition = "2021"
name = "pallet-ethereum-chain-id"
version = "1.0.0"

[dependencies]
serde = { version = "1.0.101", optional = true, features = [ "derive" ] }

# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.0", default-features = false, features = [ "derive" ] }

[features]
default = [ "std" ]
std = [
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "serde",
]
