[package]
authors = ['Moereum Network <https://github.com/NonceGeek>']
description = 'Fetch stdlib using local git binary and dove for build.'
license = 'Apache 2.0'
edition = '2021'
name = 'stdlib-fetch'
repository = "https://github.com/NonceGeek/Moereum"
version = '1.0.0'

[dependencies]
anyhow = "1.0.42"
